--- a/public/partials/assign.htm
+++ b/public/partials/assign.htm
@@ -1,10 +1,3 @@
-<div>
-    <form class="form-inline">
-        <input class="input-medium" type="text" data-ng-model="path">
-    </form>
-</div>
-
-<input class="btn" type="submit" value="Apply" data-ng-click="apply()">
 <table class="table">
     <thead>
         <tr>
@@ -15,23 +8,23 @@
     </thead>
 
     <tbody>
-        <tr data-ng-repeat="file in files | filter: filterExisting | orderBy: ['path']">
+        <tr data-ng-repeat="file in files | orderBy: ['path']">
             <td>
-                <a class="clickable" data-ng-click="navigate(file)" data-ng-show="file.isDir">{{file.name}}</a>
+                <a data-ng-click="navigate(file)" data-ng-show="file.isDir">{{file.name}}</a>
                 <span data-ng-hide="file.isDir">{{file.name}}</span>
             </td>
             <td>
                 <input type="text" data-ng-model="file.beautified" data-ng-show="file.isDir"></td>
             <td>
-                <div class="btn-group" data-ng-class="{open: file.open}" data-ng-show="file.isDir">
-                    <input class="btn" value="{{(file.categories | transform: 'name').join(', ')}}">
-                    <button class="btn dropdown-toggle" data-ng-click="file.open=!file.open;search(file)">
+                <div class="input-append btn-group" data-ng-class="{open: file.open}" data-ng-show="file.isDir">
+                    <input type="search" data-ng-model="file.search" placeholder="{{(entries | arrayContains:file.path:'paths' | transform: 'title').join(', ')}}">
+                    <button class="btn dropdown-toggle" data-ng-click="file.open=!file.open">
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li data-ng-repeat="category in categories">
-                            <a tabindex="-1" data-ng-click="toggleCategory(file, category)">{{category.name}}
-                                <span class="icon-ok pull-left" data-ng-class="{hidden: file.categories.indexOf(category) === -1}"></span>
+                        <li data-ng-repeat="entry in entries | toArray | filter: {title: file.search}">
+                            <a tabindex="-1" data-ng-click="toggleEntry(file, entry)">{{entry.title}}
+                               <span class="icon-ok pull-left" data-ng-class="{hidden: (entries | toArray | arrayContains:file.path:'paths' | transform: 'id' | filter: entry.id).length == 0}"></span>
                             </a>
                         </li>
                     </ul>
