Also middle-align the play button

--- a/public/partials/entry/details.htm
+++ b/public/partials/entry/details.htm
@@ -46,7 +46,7 @@
                         </thead>
                         <tbody>
                             <tr data-ng-repeat="episode in season.episodes">
-                                <td><button data-ng-click="play(episode)" data-ng-show="episode.path" class="btn"><span class="icon-play"></span></button></td>
+                                <td style="vertical-align: middle"><button data-ng-click="play(episode)" data-ng-show="episode.path" class="btn"><span class="icon-play"></span></button></td>
                                 <td style="vertical-align: middle">{{episode.episode}}</td>
                                 <td style="vertical-align: middle">{{episode.title}}</td>
                             </tr>
