--- a/public/partials/entry/details.htm
+++ b/public/partials/entry/details.htm
@@ -1,4 +1,5 @@
 <h3>{{entry.title}}</h3>
+<div class="alert" data-ng-show="{{entry.paths.length == 0}}">No file paths added</div>
 <div class="row-fluid">
     <div class="span2">
         <div class="btn-toolbar text-center">
