--- a/public/partials/entry/list.htm
+++ b/public/partials/entry/list.htm
@@ -1,4 +1,5 @@
-<table class="table table-hover">
+<a class="btn btn-primary" href="#/search">Add</a>
+<table class="table table-hover table-striped">
 	<thead>
 		<tr>
 			<th>Image</th>
