--- a/public/style.css
+++ b/public/style.css
@@ -28,3 +28,27 @@ nav .nav.nav-list {
     float: left;
     text-align: center;
 }
+
+.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.videoPlayer {
+    position: fixed;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+.flowplayer .fp-fallback {
+    display: none;
+}
+
+.flowplayer.is-error .fp-fallback {
+    display: block;
+}
