--- a/public/partials/entry/details.htm
+++ b/public/partials/entry/details.htm
@@ -62,11 +62,12 @@
 </div>
 
 <div class="fullscreen" data-ng-click="closeVideo($event)" data-ng-if="video">
-    <div class="flowplayer videoPlayer" data-native_fullscreen="true" data-ng-init="initFlow($event)" data-ng-click="$event.stopPropagation()">
+    <div class="flowplayer no-time videoPlayer" data-native_fullscreen="true" data-ng-init="initFlow($event)" data-ng-click="$event.stopPropagation()">
         <video autoplay controls>
             <source type="video/webm" src="/stream/{{video.src}}/webm/?size={{video.size}}">
             <source type="application/vnd.apple.mpegurl" src="/stream/{{video.src}}/hls/playlist.m3u8?size={{video.size}}">
             <source type="video/flash" src="/stream/{{video.src}}/flv/?size={{video.size}}">
+            <source src="/stream/{{video.src}}">
         </video>
     </div>
 </div>
