--- a/public/partials/entry/details.htm
+++ b/public/partials/entry/details.htm
@@ -66,6 +66,7 @@
         <video autoplay controls>
             <source type="video/webm" src="/stream/{{video.src}}/webm/?size={{video.size}}">
             <source type="application/vnd.apple.mpegurl" src="/stream/{{video.src}}/hls/playlist.m3u8?size={{video.size}}">
+        </video>
     </div>
     <div data-ng-if="video.fallback == 1" class="flowplayer no-time videoPlayer" data-embed="false" data-flashfit="true" data-ng-init="initFlow($event)" data-ng-click="$event.stopPropagation()">
         <video autoplay controls>
