Generate an absolute video url for flash
Flowplayer tries to resolve relative path with a <img> tag. This
triggers a load of the source in all browsers. All browsers except
chrome immediately abort that request, however chrome does not, which
leads to two streams is parallel which is not feasible for low-cpu
devices.

--- a/public/partials/entry/details.htm
+++ b/public/partials/entry/details.htm
@@ -70,7 +70,7 @@
     </div>
     <div data-ng-if="video.fallback == 1" class="flowplayer no-time videoPlayer" data-embed="false" data-flashfit="true" data-ng-init="initFlow($event)" data-ng-click="$event.stopPropagation()">
         <video autoplay controls>
-            <source type="video/flash" src="/stream/{{video.src}}/flv/?size={{video.size}}">
+            <source type="video/flash" src="{{origin}}stream/{{video.src}}/flv/?size={{video.size}}">
         </video>
     </div>
     <div data-ng-if="video.fallback == 3" class="videoPlayer" data-ng-click="$event.stopPropagation()">
