Add missing flowplayer init

--- a/public/partials/entry/details.htm
+++ b/public/partials/entry/details.htm
@@ -73,7 +73,7 @@
             <source type="video/flash" src="{{origin}}stream/{{video.src}}/flv/?size={{video.size}}">
         </video>
     </div>
-    <div data-ng-if="video.fallback == 3" class="flowplayer videoPlayer" data-embed="false" data-native_fullscreen="true" data-ng-click="$event.stopPropagation()">
+    <div data-ng-if="video.fallback == 3" class="flowplayer videoPlayer" data-embed="false" data-native_fullscreen="true" data-ng-init="initFlow($event)" data-ng-click="$event.stopPropagation()">
         <video autoplay controls>
             <source src="/stream/{{video.src}}">
         </video>
