Fix show sorting in overview

--- a/public/partials/entry/list.htm
+++ b/public/partials/entry/list.htm
@@ -9,7 +9,7 @@
 	</thead>
 	
 	<tbody>
-		<tr class="clickable" data-ng-repeat="entry in entries | orderBy: 'title'" data-ng-click="chooseEntry(entry)">
+		<tr class="clickable" data-ng-repeat="entry in entries | toArray | orderBy: 'title'" data-ng-click="chooseEntry(entry)">
 			<td><div><img class="thumbnail small-cover" data-ng-src="{{entry.image}}"></div></td>
 			<td>{{entry.title}}</td>
             <td>{{entry.watched || 0}} / {{(entry.seasons | transform:'episodes' | flatten).length || '?'}}</td>
