Finish up the client side features

--- a/public/partials/entry/download.htm
+++ b/public/partials/entry/download.htm
@@ -1,5 +1,5 @@
-﻿<form class="form-horizontal">
-    <input type="text" data-ng-model="path"> <button class="btn" data-ng-click="suggest()">Use title</button> <input class="btn" type="submit" value="Apply">
+﻿<form class="form-horizontal" data-ng-submit="saveDir()">
+    <input type="text" data-ng-model="downloadDir"> <button class="btn" data-ng-click="suggest()">Use title</button> <input class="btn" type="submit" value="Apply">
 </form>
 
 <h4>Add source</h4>
