--- a/public/style.css
+++ b/public/style.css
@@ -30,18 +30,25 @@ nav .nav.nav-list {
 }
 
 .fullscreen {
+    display: table;
     background-color: rgba(0,0,0,0.5);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    text-align: center;
+}
+
+.fullscreen > div {
+    display:table-cell;
+    left: 5%;
+    top: 5%;
+    width: 90%;
+    height: 90%;
+    vertical-align:middle;
 }
 
 .videoPlayer {
-    position: fixed;
-    top: 5%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
+    display: inline-block;
 }
