--- a/public/partials/entry/details.htm
+++ b/public/partials/entry/details.htm
@@ -67,7 +67,7 @@
             <source type="video/webm" src="/stream/{{video.src}}/webm/?size={{video.size}}">
             <source type="application/vnd.apple.mpegurl" src="/stream/{{video.src}}/hls/playlist.m3u8?size={{video.size}}">
 
-            <source src="/stream/{{video.src}}/flv/?size={{video.size}}">
+            <source type="application/x-flv" src="/stream/{{video.src}}/flv/?size={{video.size}}">
             <source src="/stream/{{video.src}}">
         </video>
     </div>
